[project]
name = "comfyui-self-guidance"
description = "Unofficial ComfyUI implementation of Self-Guidance."
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers==0.26.3", "fuzzywuzzy==0.18.0"]

[project.urls]
Repository = "https://github.com/forever22777/comfyui-self-guidance"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-self-guidance"
Icon = ""
